header section start

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Flower Shop Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+    <nav class="nav-title">
+      <h4 class="nav-header">SEND SOMEONE A BOUQUET OF BEAUTIFUL FLOWERS
+        </h4>
+        <p class="nav-info">Flowers add so much to our world. They feed the bees and other pollinators. They are beautiful. Some smell so good that they are used in perfume, lotion and other body products.</p>
+        <button class="btn-primary">Shop now</button>
+    </nav>
+    <div>
+      <img src="img/pngwing 10.png" alt="">
+    </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
