header section finished

--- a/index.html
+++ b/index.html
@@ -8,21 +8,33 @@
   </head>
   <body>
     <header class="header">
-    <nav class="nav-title">
-      <h4 class="nav-header">SEND SOMEONE A BOUQUET OF BEAUTIFUL FLOWERS
-        </h4>
-        <p class="nav-info">Flowers add so much to our world. They feed the bees and other pollinators. They are beautiful. Some smell so good that they are used in perfume, lotion and other body products.</p>
+      <nav class="nav-title">
+        <h4 class="nav-header">SEND SOMEONE A BOUQUET OF BEAUTIFUL FLOWERS</h4>
+        <p class="nav-info">
+          Flowers add so much to our world. They feed the bees and other
+          pollinators. They are beautiful. Some smell so good that they are used
+          in perfume, lotion and other body products.
+        </p>
         <button class="btn-primary">Shop now</button>
-    </nav>
-    <div>
-      <img src="img/pngwing 10.png" alt="">
-    </div>
+      </nav>
+      <div>
+        <img class="profile-pic" src="img/pngwing 10.png" alt="" />
+      </div>
     </header>
     <main>
-
+      <!-- feature flowers section start -->
+      <!-- <section>
+        <div class="para-1">
+          <h3 class="para-1-title">Our Featured Flowers</h3>
+          <p class="para-1-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="img">
+          <img class="img-1" src="img/pngwing 6.png" alt="">
+          <img class="img=2" src="img/pngwing 5.png" alt="">
+          <img class="img-3" src="img/pngwing 7.png" alt="">
+        </div>
+      </section> -->
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
