--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="btn-primary">Shop now</button>
       </nav>
       <div>
-        <img class="profile-pic" src="img/pngwing 10.png" alt="" />
+        <img class="profile-pic1" src="img/pngwing 10.png" alt="" />
       </div>
     </header>
     <main>
@@ -34,6 +34,26 @@
           <img class="img-3" src="img/pngwing 7.png" alt="">
         </div>
       </section> -->
+      <section class="section1">
+        <div class="section">
+          <h4 class="section-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h4>
+          <p class="section-info">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <button class="btn-primary">Sign Up</button>
+        </div>
+        <img class="profile-pic2" src="img/pngwing 8.png" alt="">
+      </section>
+
+      <!-- latest details section start  -->
+      <section class="section2">
+        <div class="section-deal">
+          <h3 class="section-title1">Get The Latest Deals</h3>
+          <p class="section-info1">$30 coupon for first shopping</p>
+        </div>
+        <form class="contact">
+          <input class="eamil" type="email"  placeholder="Enter your email here....">
+          <input class="btn-primary" type="button" value="subscribe">
+        </form>
+      </section>
     </main>
     <footer></footer>
   </body>
