--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <nav class="nav-title">
-        <h4 class="nav-header">SEND SOMEONE A BOUQUET OF BEAUTIFUL FLOWERS</h4>
+        <h4 class="nav-header">Send Someone a Bouquet of Beautiful Flowers</h4>
         <p class="nav-info">
           Flowers add so much to our world. They feed the bees and other
           pollinators. They are beautiful. Some smell so good that they are used
@@ -23,24 +23,67 @@
     </header>
     <main>
       <!-- feature flowers section start -->
-      <!-- <section>
+      <section>
         <div class="para-1">
           <h3 class="para-1-title">Our Featured Flowers</h3>
           <p class="para-1-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
         <div class="img">
-          <img class="img-1" src="img/pngwing 6.png" alt="">
-          <img class="img=2" src="img/pngwing 5.png" alt="">
-          <img class="img-3" src="img/pngwing 7.png" alt="">
+          <img src="img/Group 70.png" alt="">
         </div>
-      </section> -->
+      </section>
+      <!-- feature flowers section end  -->
+      <section class="section4">
+        <h3 class="section-title4">Flower Price</h3>
+        <p id="flower" class="section-description">Let us convey your sentiment with the perfect gift of flowers. We deliver flower to all cities of Bangladesh.</p>
+        <div class="skills-container">
+          <div class="skill skill1">
+            <img src="img/uf4.jpg" alt="">
+            <h3 class="skill-tiltle">35 red roses in a bunch</h3>
+            <p class="skill-description">
+              Price:	Tk ৳1995.00</p>
+          </div>
+          <div class="skill skill2">
+            <img src="img/uf2.jpg" alt="">
+            <h3 class="skill-tiltle">Eye-catching Gerbera</h3>
+            <p class="skill-description">
+              Price:	
+              Tk ৳2436.00</p>
+          </div>
+          <div class="skill skill3">
+            <img src="img/uf5.jpg" alt="">
+            <h3 class="skill-tiltle">Simply Stunning</h3>
+            <p class="skill-description">
+              Price:	
+              Tk ৳780.00</p>
+        </div>
+      </section>
+      <!-- hot deal section start  -->
       <section class="section1">
         <div class="section">
-          <h4 class="section-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h4>
-          <p class="section-info">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h4 class="section-title">
+            Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span>
+          </h4>
+          <p class="section-info">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
           <button class="btn-primary">Sign Up</button>
         </div>
-        <img class="profile-pic2" src="img/pngwing 8.png" alt="">
+        <img class="profile-pic2" src="img/pngwing 8.png" alt="" />
+      </section>
+      <!-- instagram section start  -->
+      <section class="section3">
+        <div>
+          <h3 class="section3-title">Instagram</h3>
+          <p class="section3-info">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="img1">
+          <img class="pic1" src="img/Flower 01.png" alt="" />
+          <img class="pic2" src="img/Rectangle 4.png" alt="" />
+          <img class="pic3" src="img/Rectangle 5.png" alt="" />
+          <img class="pic4" src="img/Rectangle 6.png" alt="" />
+        </div>
       </section>
 
       <!-- latest details section start  -->
@@ -50,11 +93,30 @@
           <p class="section-info1">$30 coupon for first shopping</p>
         </div>
         <form class="contact">
-          <input class="eamil" type="email"  placeholder="Enter your email here....">
-          <input class="btn-primary" type="button" value="subscribe">
+          <input
+            class="eamil"
+            type="email"
+            placeholder="Enter your email here...."
+          />
+          <input class="btn-primary" type="button" value="subscribe" />
         </form>
       </section>
+      <!-- latest details section end  -->
+      
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <h3 class="footer-title">
+          <span class="text-primary">Flower</span>Shop
+        </h3>
+        <p class="footer-info">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <p class="footer-end">
+          @2020-2023, FlowerShop.com. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
