--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- feature flowers section end  -->
       <section class="section4">
         <h3 class="section-title4">Flower Price</h3>
-        <p id="flower" class="section-description">Let us convey your sentiment with the perfect gift of flowers. We deliver flower to all cities of Bangladesh.</p>
+        <p class="section-description">Let us convey your sentiment with the perfect gift of flowers. We deliver flower to all cities of Bangladesh.</p>
         <div class="skills-container">
           <div class="skill skill1">
             <img src="img/uf4.jpg" alt="">
@@ -43,14 +43,14 @@
             <p class="skill-description">
               Price:	Tk ৳1995.00</p>
           </div>
-          <div class="skill skill2">
+          <div class="skill">
             <img src="img/uf2.jpg" alt="">
             <h3 class="skill-tiltle">Eye-catching Gerbera</h3>
             <p class="skill-description">
               Price:	
               Tk ৳2436.00</p>
           </div>
-          <div class="skill skill3">
+          <div class="skill">
             <img src="img/uf5.jpg" alt="">
             <h3 class="skill-tiltle">Simply Stunning</h3>
             <p class="skill-description">
