--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="para-1-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
         <div class="img">
-          <img src="img/Group 70.png" alt="">
+          <img class="img0" src="img/Group 70.png" alt="">
         </div>
       </section>
       <!-- feature flowers section end  -->
@@ -38,20 +38,20 @@
         <p class="section-description">Let us convey your sentiment with the perfect gift of flowers. We deliver flower to all cities of Bangladesh.</p>
         <div class="skills-container">
           <div class="skill skill1">
-            <img src="img/uf4.jpg" alt="">
+            <img class="img11" src="img/uf4.jpg" alt="">
             <h3 class="skill-tiltle">35 red roses in a bunch</h3>
             <p class="skill-description">
               Price:	Tk ৳1995.00</p>
           </div>
           <div class="skill">
-            <img src="img/uf2.jpg" alt="">
+            <img class="img12" src="img/uf2.jpg" alt="">
             <h3 class="skill-tiltle">Eye-catching Gerbera</h3>
             <p class="skill-description">
               Price:	
               Tk ৳2436.00</p>
           </div>
           <div class="skill">
-            <img src="img/uf5.jpg" alt="">
+            <img class="img13" src="img/uf5.jpg" alt="">
             <h3 class="skill-tiltle">Simply Stunning</h3>
             <p class="skill-description">
               Price:	
